# haskell-ide-engine

./: haskell-ide-engine.cabal  stack.yaml
app/: MainHie.hs
haskell-ide-psc-ide-plugin/: haskell-ide-psc-ide-plugin.cabal
haskell-ide-psc-ide-plugin/Haskell/Ide/: PscIdePlugin.hs
src/Haskell/Ide/Engine/: Options.hs
src/Haskell/Ide/Engine/Transport/: JsonStdio.hs
